--- a/misc/freebsd-doc-de/pkg-plist.html
+++ b/misc/freebsd-doc-de/pkg-plist.html
@@ -4,6 +4,7 @@
 %%DOCSDIR%%/%%DOCLANG%%/articles/explaining-bsd/article.html
 %%DOCSDIR%%/%%DOCLANG%%/articles/laptop/article.html
 %%DOCSDIR%%/%%DOCLANG%%/articles/linux-comparison/article.html
+%%DOCSDIR%%/%%DOCLANG%%/articles/nanobsd/article.html
 %%DOCSDIR%%/%%DOCLANG%%/articles/new-users/article.html
 %%DOCSDIR%%/%%DOCLANG%%/articles/port-mentor-guidelines/article.html
 %%DOCSDIR%%/%%DOCLANG%%/articles/solid-state/article.html
